# CA_Embedded_Libraries

./: .gitignore  README.md
.github/workflows/: stm32build.yml
STM32/ADCMonitor/Inc/: ADC16Monitor.h  ADCMonitor.h
STM32/ADCMonitor/Src/: ADC16monitor.c  ADCmonitor.c
STM32/CaCMSISInterface/Inc/: ca_rfft.h
STM32/CaCMSISInterface/Src/: ca_rfft.c
STM32/Crc/Inc/: crc.h
STM32/Crc/Src/: crc.c
STM32/FLASH_readwrite/Inc/: FLASH_readwrite.h  HAL_otp.h
STM32/FLASH_readwrite/Src/: FLASH_readwrite.c  HAL_H7_otp.c  HAL_otp.c
STM32/Filtering/Inc/: array-math.h  iir_filters.h  lowpassFilter.h  notchFilter.h
STM32/Filtering/Src/: array-math.c  iir_filters.c  lowpassFilter.c  notchFilter.c
STM32/FirmwarePackages/STM32F401CCUx/: stm32f4xx_hal_conf.h
STM32/I2C/Inc/: LPS28DFW.h  MCP4531.h  TCI.h  honeywellZephyrI2C.h  mcp4x.h  sht45.h  sm4291.h
STM32/I2C/Src/: LPS28DFW.c  MCP4531.c  TCI.c  mcp4x.c  sht35.c  sht45.c  sm4291.c
STM32/Regulation/Inc/: sisopid.h
STM32/Regulation/Src/: sisopid.c
STM32/SPI/Inc/: AD5683.h  ADS1120.h  ADS114S08.h  ADS7953.h  LTC2512-24.h  W5500.h
STM32/SPI/Src/: AD5683.c  ADS1120.c  ADS114S08.c  ADS7953.c  DAC7811.c  LTC2512-24.c  W5500.c
STM32/TransformationFunctions/Inc/: goertzel.h  hanning.h
STM32/TransformationFunctions/Src/: goertzel.c  hanning.c
STM32/USBprint/Inc/: USBprint.h  usb_cdc_fops.h
STM32/USBprint/Src/: USBprint.c  usb_cdc_fops.c
STM32/UnitTesting/: .gitignore  ADC_TEST  CMakeLists.txt  GOERTZEL_TEST
STM32/UnitTesting/Inc/: stm32f4xx_hal.h
STM32/UnitTesting/src/: stubs.cpp  testGoertzel.cpp
STM32/Util/Inc/: CAProtocol.h  CAProtocolACDC.h  CAProtocolBoard.h  CAProtocolData.h  CAProtocolStm.h  StmGpio.h  faultHandlers.h  systemInfo.h  time32.h  uptime.h
STM32/Util/Src/: CAProtocol.c  CAProtocolACDC.c  CAProtocolBoard.c  CAProtocolStm.c  StmGpio.c  faultHandlers.c  systeminfo.c  uptime.c
STM32/circularBuffer/Inc/: circular_buffer.h
STM32/circularBuffer/Src/: circular_buffer.c
STM32/jumpToBootloader/Src/: jumpToBootloader.c
unit_testing/: unitTests.py
unit_testing/ADCMonitor/: CMakeLists.txt  adcmonitor_tests.cpp
unit_testing/ADCMonitor/Inc/: stm32f4xx_hal_conf.h
unit_testing/FLASH_readwrite/: CMakeLists.txt  flash_tests.cpp
unit_testing/FLASH_readwrite/Inc/: stm32f4xx_hal_conf.h
unit_testing/Filtering/: CMakeLists.txt  arraymath_tests.cpp  iir_filters_tests.cpp  lowpassfilter_tests.cpp  notchfilter_tests.cpp
unit_testing/I2C/: CMakeLists.txt  lps28dfw_tests.cpp  tci_tests.cpp
unit_testing/I2C/Inc/: stm32f4xx_hal_conf.h
unit_testing/SPI/: ADS7953_tests.cpp  CMakeLists.txt  ltc2512_tests.cpp
unit_testing/SPI/Inc/: stm32f4xx_hal_conf.h
unit_testing/TransformationFunctions/: CMakeLists.txt  goertzel_tests.cpp  hanning_tests.cpp
unit_testing/USBprint/: CMakeLists.txt  usbprint_tests.cpp
unit_testing/USBprint/Inc/: stm32f4xx_hal_conf.h
unit_testing/Util/: CMakeLists.txt  caBoardUnitTests.h  caprotocol_tests.cpp  serialStatus_tests.cpp  serialStatus_tests.h  systeminfo_tests.cpp  uptime_tests.cpp
unit_testing/Util/Inc/: stm32f4xx_hal_conf.h
unit_testing/array-math/: CMakeLists.txt  arraymath_tests.cpp
unit_testing/fakes/: fake_ADS1120.cpp  fake_ADS1120.h  fake_ADS7953.cpp  fake_DS18B20.cpp  fake_DS18B20.h  fake_FLASH_readwrite.cpp  fake_StmGpio.h  fake_USBprint.cpp  fake_USBprint.h  fake_W5500.cpp  fake_ethernet.cpp  fake_honeywellZephyrI2C.cpp  fake_honeywellZephyrI2C.h  fake_stm32f401xc.h  fake_stm32f4xx_hal_conf.h  fake_stm32f4xx_hal_crc.h  fake_stm32f4xx_hal_def.h  fake_stm32f4xx_hal_flash.h  fake_stm32f4xx_hal_flash_ex.h  fake_stm32xxxx_hal.cpp  fake_stm32xxxx_hal.h  fake_usbd_cdc.cpp  fake_usbd_cdc.h
unit_testing/redirects/: stm32f4xx_hal_crc.h  stm32f4xx_hal_flash.h  usbd_cdc.h
unit_testing/stubs/: stub_CAProtocolStm.cpp  stub_FLASH_readwrite.cpp
